 $Id: ChangeLog,v 1.14 2004/02/29 22:15:26 mkern Exp $

2004-02-29  Markus Kern <mkern@users.berlios.de>

	* Rewrote UDP supernode discovery to work in parallel with TCP

2004-01-16  Markus Kern <mkern@users.berlios.de>

	* Added UDP supernode discovery

2003-11-27  Markus Kern <mkern@users.berlios.de>

	* Added sharing of files
	* Improved and activated Participation Level code (thanks Ashton)
	* Fixed memory leaks reported by Luna

2003-09-18  Markus Kern <mkern@users.berlios.de>

	* Added downloading from firewalled hosts
	* Rewrote search reply parsing and added user name decompression

2003-09-17  Markus Kern <mkern@users.berlios.de>

	* Added HTTP server. Doesn't do anything yet.

2003-09-12  Markus Kern <mkern@users.berlios.de>

	* Added filtering of bogus search results based on banlist

2003-09-11  Markus Kern <mkern@users.berlios.de>

	* Changed hash encoding from hex to base64
	* Changed url format. Old format still supported for now

2003-09-10  Markus Kern <mkern@users.berlios.de>

	* Rewrote entire download system
	* Cleaned up stuff all over the place

2003-07-14  Markus Kern <mkern@users.berlios.de>

	* Lots of bug fixes/clean ups since last ChangeLog entry
	* Releasing 0.8.2 for compatibility with giFT release 0.11.1

2003-06-29  Chris Zubrzycki  <beren12@sheep.berlios.de>

    * added configure options for debugging and heavy debugging
	* cleaning up source code

2003-06-27  Chris Zubrzycki  <beren12@sheep.berlios.de>

	* update for protocol_compat system, we can now hardcode the last
	  libgiftproto version we know about

2003-06-07  Chris Zubrzycki  <beren12@sheep.berlios.de>

	* added automake files for plugin creation.
	* TODO: add manpage and more docs
	* moved sources to src/

2003-05-18  Markus Kern <mkern@user.berlios.de>

	* Fixed the endianess issues, the plugin should now work fine
	  on big-endian

2003-05-09  Markus Kern <mkern@users.berlios.de>

	* Fixed download status reporting
	* Improved Makefile (thank you Justin)
