@@ -1,4 +1,4 @@
-$Id: TODO,v 1.22 2004/02/29 22:15:26 mkern Exp $
+$Id: TODO,v 1.23 2004/03/02 23:14:38 mkern Exp $
 
 - make the README clearer
 - determine if we can make LIBTOOL=glibtool for mac os x users automatic
@@ -12,8 +12,6 @@ $Id: TODO,v 1.22 2004/02/29 22:15:26 mkern Exp $
 - does kazaa use the same fst_id for searchin again?
 - make use of country code in nodes file
 - use bandwidth from search results for availability
-- limit number of shared files
 - normalize meta data
 - do byte order conversion in fst_packet instead of all over the place
-- don't sort out index nodes when saving node list
 
