@@ -1,5 +1,5 @@
 /*
- * $Id: fst_udp_discover.h,v 1.8 2004/03/02 20:03:32 mkern Exp $
+ * $Id: fst_udp_discover.h,v 1.9 2004/03/02 23:14:38 mkern Exp $
  *
  * Copyright (C) 2003 giFT-FastTrack project
  * http://developer.berlios.de/projects/gift-fasttrack
